--- a/market.html
+++ b/market.html
@@ -42,27 +42,6 @@
                 </a>
               </div>
               <div class="header__nav">
-                <!--nav-hide -->
-                <ul class="navHide" style="display: none">
-                  <li class="list">
-                    <a class="list-item" href="javscript:;"> Thị Trường </a>
-                  </li>
-                  <li class="list">
-                    <a class="list-item" href="javscript:;"> Cơ sở </a>
-                  </li>
-                  <li class="list">
-                    <a class="list-item" href="javscript:;"> Phát sinh </a>
-                  </li>
-                  <li class="list">
-                    <a class="list-item" href="javscript:;"> Tài sản </a>
-                  </li>
-                  <li class="list">
-                    <a class="list-item" href="javscript:;"> Sổ lệnh </a>
-                  </li>
-                  <li class="list">
-                    <a class="list-item" href="javscript:;"> Tiện ích </a>
-                  </li>
-                </ul>
                 <!--navbar -->
                 <ul class="navbar">
                   <li class="navbar__item">
@@ -136,6 +115,42 @@
                 src="./img/dropdown-icon.svg"
                 alt="dropdown-icon"
               />
+            </div>
+            <!--navhide -->
+            <ul class="navHide">
+              <li class="list">
+                <a class="list-item" href="javscript:;"> Thị Trường </a>
+              </li>
+              <li class="list">
+                <a class="list-item" href="javscript:;"> Cơ sở </a>
+              </li>
+              <li class="list">
+                <a class="list-item" href="javscript:;"> Phát sinh </a>
+              </li>
+              <li class="list">
+                <a class="list-item" href="javscript:;"> Tài sản </a>
+              </li>
+              <li class="list">
+                <a class="list-item" href="javscript:;"> Sổ lệnh </a>
+              </li>
+              <li class="list">
+                <a class="list-item" href="javscript:;"> Tiện ích </a>
+              </li>
+              <li class="list">
+                <a class="list-item" href="javscript:;"> Giao dịch nhanh </a>
+              </li>
+              <li class="list">
+                <a class="list-item" href="javscript:;">Tài khoản</a>
+              </li>
+              <li class="list">
+                <a class="list-item" href="javscript:;">Đăng xuất</a>
+              </li>
+            </ul>
+            <div class="tabBox">
+              <!-- <i class="fa-solid fa-xmark"></i> -->
+            </div>
+            <div class="menuHide">
+              <img src="./img/icon-menu.svg" alt="menuHide" />
             </div>
           </div>
         </div>
