--- a/market.html
+++ b/market.html
@@ -104,12 +104,15 @@
               <div class="ring-box">
                 <img class="ring" src="./img/ring-icon.png" alt="ring" />
               </div>
-              <img
-                class="avata-girl"
-                src="./img/img-girl.png"
-                alt="avata-girl"
-              />
-              <p>lutuananh</p>
+              <!-- account__box-->
+              <div class="account__box">
+                <img
+                  class="avata-girl"
+                  src="./img/img-girl.png"
+                  alt="avata-girl"
+                />
+                <span>lutuananh</span>
+              </div>
               <img
                 class="dropdown-icon"
                 src="./img/dropdown-icon.svg"
@@ -381,7 +384,7 @@
                     Ưu thích
                   </a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item nav-item-box">
                   <a
                     class="nav-link"
                     href="#top"
@@ -394,6 +397,11 @@
                     Top
                     <img src="./img/dropdown-stick.png" alt="dropdown" />
                   </a>
+                  <div class="menuBox">
+                    <div>Tổng hợp</div>
+                    <div>HNX</div>
+                    <div>Lịch sử thỏa thuận</div>
+                  </div>
                 </li>
                 <li class="nav-item">
                   <a
@@ -587,6 +595,11 @@
           </div>
         </div>
       </header>
+      <!-- <div class="menuBox">
+        <div>Tổng hợp</div>
+        <div>HNX</div>
+        <div>Lịch sử thỏa thuận</div>
+      </div> -->
       <!-- tab-content -->
       <div class="tab-content" href="myTabContent">
         <div
