--- a/market.html
+++ b/market.html
@@ -649,21 +649,16 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a
+                  <!-- <a
                     class="nav-link"
                     id="tab"
                     data-toggle="tab"
-                    href="#"
                     role="tab"
                     aria-controls="#"
                     aria-selected="false"
-                  >
-                    <img
-                      class="deepzoom"
-                      src="./img/deepzoom-icon.png"
-                      alt=""
-                    />
-                  </a>
+                  > -->
+                  <img class="deepzoom" src="./img/deepzoom-icon.png" alt="" />
+                  <!-- </a> -->
                 </li>
               </ul>
             </div>
