fix-event-account

--- a/market.html
+++ b/market.html
@@ -2738,5 +2738,6 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="./js/bootstrap/js/bootstrap.min.js"></script>
     <script src="./js/app.js"></script>
+    <script src="./js/common.header.js"></script>
   </body>
 </html>
