--- a/trading.html
+++ b/trading.html
@@ -147,7 +147,7 @@
         </div>
       </div>
     </div>
-    <script src="./js/app.js"></script>
+    <script src="./js/common.header.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </body>
 </html>
