add-menu-item-asset

--- a/market.html
+++ b/market.html
@@ -63,7 +63,10 @@
                     </a>
                   </li>
                   <li class="navbar__item">
-                    <a class="navbar__item-link" href="javascript:;">
+                    <a
+                      class="navbar__item-link order-book"
+                      href="http://127.0.0.1:5500/trading.html"
+                    >
                       Sổ lệnh
                     </a>
                   </li>
@@ -2738,6 +2741,6 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="./js/bootstrap/js/bootstrap.min.js"></script>
     <script src="./js/app.js"></script>
-    <script src="./js/common.header.js"></script>
+    <!-- <script src="./js/common.header.js"></script> -->
   </body>
 </html>
