--- a/trade.html
+++ b/trade.html
@@ -56,7 +56,9 @@
                   </a>
                 </li>
                 <li class="navbar__item">
-                  <a class="navbar__item-link" href="javascript:;"> Sổ lệnh </a>
+                  <a class="navbar__item-link order-book" href="javascript:;">
+                    Sổ lệnh
+                  </a>
                 </li>
                 <li class="navbar__item">
                   <a class="navbar__item-link" href="javascript:;">
@@ -106,8 +108,8 @@
               alt="dropdown-icon"
             />
           </div>
-          <!--navhide -->
-          <ul class="navHide">
+          <!-- navhide -->
+          <!-- <ul class="navHide">
             <li class="list">
               <a class="list-item" href="javascript:;"> Thị Trường </a>
             </li>
@@ -135,7 +137,7 @@
             <li class="list">
               <a class="list-item" href="javascript:;">Đăng xuất</a>
             </li>
-          </ul>
+          </ul> -->
           <div class="tabBox"></div>
           <div class="menuHide">
             <img
