--- a/market.html
+++ b/market.html
@@ -58,14 +58,14 @@
                     </a>
                   </li>
                   <li class="navbar__item">
-                    <a class="navbar__item-link asset" href="javascript:;">
+                    <a class="navbar__item-link asset" href="asset-trade.html">
                       Tài sản
                     </a>
                   </li>
                   <li class="navbar__item">
                     <a
                       class="navbar__item-link order-book"
-                      href="http://127.0.0.1:5500/trading.html"
+                      href="orderbook-trade.html"
                     >
                       Sổ lệnh
                     </a>
@@ -2741,6 +2741,6 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="./js/bootstrap/js/bootstrap.min.js"></script>
     <script src="./js/app.js"></script>
-    <!-- <script src="./js/common.header.js"></script> -->
+    <script src="./js/common.header.js"></script>
   </body>
 </html>
