--- a/orderbook-trade.html
+++ b/orderbook-trade.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Trade-orderbook</title>
+    <title>Orderbook-Trade</title>
     <link rel="stylesheet" href="./scss/order-book.css" />
     <link
       rel="stylesheet"
