add-sidebar-orderBook

--- a/market.html
+++ b/market.html
@@ -54,7 +54,7 @@
                   </li>
                   <li class="navbar__item">
                     <a class="navbar__item-link" href="javascript:;">
-                      Phát sinh
+                      Phái sinh
                     </a>
                   </li>
                   <li class="navbar__item">
