--- a/orderbook-trade.html
+++ b/orderbook-trade.html
@@ -47,7 +47,7 @@
                 </li>
                 <li class="navbar__item">
                   <a class="navbar__item-link" href="javascript:;">
-                    Phát sinh
+                    Phái sinh
                   </a>
                 </li>
                 <li class="navbar__item">
