add event click, fix formating

--- a/asset-trade.html
+++ b/asset-trade.html
@@ -56,7 +56,10 @@
                   </a>
                 </li>
                 <li class="navbar__item">
-                  <a class="navbar__item-link order-book" href="javascript:;">
+                  <a
+                    class="navbar__item-link order-book"
+                    href="orderbook-trade.html"
+                  >
                     Sổ lệnh
                   </a>
                 </li>
