--- a/orderbook-trade.html
+++ b/orderbook-trade.html
@@ -51,7 +51,7 @@
                   </a>
                 </li>
                 <li class="navbar__item">
-                  <a class="navbar__item-link asset" href="javascript:;">
+                  <a class="navbar__item-link asset" href="asset-trade.html">
                     Tài sản
                   </a>
                 </li>
